--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,6 @@ add c4 graphics          [done]
 add undo and redo functions
 add sounds 
 ask eng nour about &current in load game
+fix message boxes (not all messages is showing)
+turn message boxes into functions
+merge games
