--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,4 @@ ask eng nour about &current in load game
 fix message boxes (not all messages is showing)
 turn message boxes into functions
 merge games
+fix loading and saving game to work with ctrl l & s
