--- a/TODO.txt
+++ b/TODO.txt
@@ -9,4 +9,4 @@ fix message boxes (not all messages is showing)
 turn message boxes into functions
 merge games
 fix loading and saving game to work with ctrl l & s
-change x o pics (preferably)
+change x o pics (preferably)(ask 3sam)
